<?xml version="1.0" encoding="utf-8"?>
<!--

    Copyright (C) 2016 DSpot Sp. z o.o

    Licensed under the Apache License, Version 2.0 (the "License"); you may not
    use this file except in compliance with the License. You may obtain a copy of
    the License at

    http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed To in writing, software
    distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
    WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
    License for the specific language governing permissions and limitations under
    the License.

-->
<resources>
    <string name="app_name">Expenses Manager</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="create">Create</string>
    <string name="name">Name</string>
    <string name="name_label">Name:</string>
    <string name="email">Email</string>
    <string name="email_label">Email:</string>
    <string name="password">Password</string>
    <string name="password_label">Password:</string>
    <string name="password_confirm">Confirm Password</string>
    <string name="password_change">Change Password</string>
    <string name="create_account_title">Create New Account</string>
    <string name="expense_details_title">Expense Details</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="expenses_list_title">Expenses list</string>
    <string name="expenses_week_list_title">Expenses per week</string>
    <string name="profile_title">Profile</string>
    <string name="add_expense">+ Add expense</string>
    <string name="expenses">Expenses</string>
    <string name="manager">Manager</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="create_new_account">CREATE NEW ACCOUNT</string>
    <string name="users_list_title">Users List</string>
    <string name="delete_modal_title">Delete expense</string>
    <string name="delete_modal_message">Are you sure you want to delete this expense?</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="value">Value</string>
    <string name="date">Date</string>
    <string name="hour">Hour</string>
    <string name="comment">Comment</string>
    <string name="min">Min</string>
    <string name="max">Max</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="filter">Filter</string>
    <string name="edit_modal_title">Edit expense</string>
    <string name="create_modal_title">Create expense</string>
    <string name="filter_amount_modal_title">Filter by amount</string>
    <string name="filter_date_modal_title">Filter by date</string>
    <string name="edit_rol_modal_title">Edit rol</string>
    <string name="action_settings">Settings</string>
    <string name="add_user">+ Add User</string>
    <string name="add">Add</string>
    <string name="role">Role</string>
    <string name="week">Week:</string>
    <string name="total">Total:</string>
    <string name="avg">Avg. day spending:</string>
    <string name="results">Results</string>
    <string name="close_search">Close Search</string>
</resources>
