<?xml version="1.0" encoding="utf-8"?>
<!--

    Copyright (C) 2016 DSpot Sp. z o.o

    Licensed under the Apache License, Version 2.0 (the "License"); you may not
    use this file except in compliance with the License. You may obtain a copy of
    the License at

    http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed To in writing, software
    distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
    WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
    License for the specific language governing permissions and limitations under
    the License.

-->
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group>
        <item
            android:id="@+id/nav_expenses_list"
            android:title="@string/expenses_list_title"
            android:checkable="true"
            android:icon="@drawable/drawer_list"/>
        <item
            android:id="@+id/nav_expenses_per_week_list"
            android:title="@string/expenses_week_list_title"
            android:checkable="true"
            android:icon="@drawable/drawer_calendar"/>
        <item
            android:id="@+id/nav_new_expense"
            android:title="@string/add_expense"
            android:checkable="true"
            android:icon="@drawable/drawer_new_expense"/>
        <item
            android:id="@+id/nav_profile"
            android:title="@string/profile_title"
            android:checkable="true"
            android:icon="@drawable/drawer_user"/>
        <item
            android:id="@+id/nav_logout"
            android:title="@string/logout"
            android:checkable="true"
            android:icon="@drawable/drawer_exit"/>
    </group>

</menu>
