<?xml version="1.0" encoding="utf-8"?>
<!--

    Copyright (C) 2016 DSpot Sp. z o.o

    Licensed under the Apache License, Version 2.0 (the "License"); you may not
    use this file except in compliance with the License. You may obtain a copy of
    the License at

    http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed To in writing, software
    distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
    WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
    License for the specific language governing permissions and limitations under
    the License.

-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="@drawable/modal_gradient">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/origin_30dp"
        android:background="@color/white1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/origin_14dp"
            android:background="@color/gray0"
            android:textColor="@color/white0"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="@dimen/origin_18sp_text_size"
            android:text="@string/filter_date_modal_title"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/origin_20dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/origin_20dp"
                android:layout_weight="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="date"
                    android:layout_marginRight="@dimen/origin_10dp"
                    android:padding="@dimen/origin_10dp"
                    android:textColor="@color/gray2"
                    android:hint="@string/from"
                    android:textColorHint="@color/gray1"
                    android:textSize="@dimen/origin_14sp_text_size"
                    android:background="@drawable/bkg_text_edit_modal"
                    android:layout_weight="0.5"
                    android:id="@+id/filterDateFrom" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="date"
                    android:layout_marginLeft="@dimen/origin_10dp"
                    android:padding="@dimen/origin_10dp"
                    android:textColor="@color/gray2"
                    android:hint="@string/to"
                    android:textColorHint="@color/gray1"
                    android:textSize="@dimen/origin_14sp_text_size"
                    android:background="@drawable/bkg_text_edit_modal"
                    android:layout_weight="0.5"
                    android:id="@+id/filterDateTo" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/origin_20dp">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/origin_40dp"
                style="@style/yellowBtn"
                android:text="@string/filter"
                android:id="@+id/btnFilterDate" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>