<?xml version="1.0" encoding="utf-8"?>
<!--

    Copyright (C) 2016 DSpot Sp. z o.o

    Licensed under the Apache License, Version 2.0 (the "License"); you may not
    use this file except in compliance with the License. You may obtain a copy of
    the License at

    http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed To in writing, software
    distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
    WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
    License for the specific language governing permissions and limitations under
    the License.

-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".fragment.ExpensesListFragment">

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:orientation="vertical">

        <ProgressBar
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar"
            android:visibility="gone"
            android:indeterminate="true"/>

        <RelativeLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/origin_20dp">
            <ImageView
                android:id="@+id/tag"
                android:layout_width="@dimen/origin_8dp"
                android:layout_height="@dimen/origin_16dp"
                android:src="@drawable/gray_tag"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/expenses_list_title"
                android:id="@+id/textView8"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/origin_16sp_text_size"
                android:layout_toRightOf="@+id/tag"
                android:layout_centerVertical="true"
                android:layout_alignTop="@+id/tag"
                android:layout_marginLeft="@dimen/origin_10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/add_expense"
                android:id="@+id/btnAddExpense"
                android:textSize="@dimen/origin_16sp_text_size"
                android:layout_alignParentTop="true"
                android:textStyle="bold"
                android:textColor="@color/yellow"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"/>
        </RelativeLayout>


        <LinearLayout android:id="@+id/filter_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <LinearLayout
                android:id="@+id/form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/origin_20dp"
                android:background="#06000000">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="date"
                    android:padding="@dimen/origin_10dp"
                    android:layout_marginLeft="@dimen/origin_10dp"
                    android:textColor="@color/gray2"
                    android:hint="@string/from"
                    android:textColorHint="@color/gray1"
                    android:textSize="@dimen/origin_14sp_text_size"
                    android:background="@drawable/bkg_text_edit_modal"
                    android:layout_weight="1"
                    android:id="@+id/filterResultFrom" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="date"
                    android:padding="@dimen/origin_10dp"
                    android:layout_marginLeft="@dimen/origin_10dp"
                    android:textColor="@color/gray2"
                    android:hint="@string/to"
                    android:textColorHint="@color/gray1"
                    android:textSize="@dimen/origin_14sp_text_size"
                    android:background="@drawable/bkg_text_edit_modal"
                    android:layout_weight="1"
                    android:id="@+id/filterResultTo" />

            </LinearLayout>

            <RelativeLayout
                android:id="@+id/header_list"
                android:layout_width="match_parent"
                android:layout_height="@dimen/origin_50dp"
                android:padding="@dimen/origin_12dp">

                <ImageView
                    android:id="@+id/tag2"
                    android:layout_width="@dimen/origin_8dp"
                    android:layout_height="@dimen/origin_16dp"
                    android:src="@drawable/yellow_tag"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/results"
                    android:id="@+id/listTitle"
                    android:textColor="@color/yellow"
                    android:textSize="@dimen/origin_16sp_text_size"
                    android:layout_toRightOf="@+id/tag2"
                    android:layout_centerVertical="true"
                    android:layout_alignTop="@+id/tag2"
                    android:layout_marginLeft="@dimen/origin_10dp"/>

                <Button
                    style="@style/yellowBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/origin_36dp"
                    android:text="@string/close_search"
                    android:id="@+id/closeSearch"
                    android:padding="4dp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true" />
            </RelativeLayout>

        </LinearLayout>

        <ListView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/expenses"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            tools:listitem="@layout/item_expense" />

    </LinearLayout>

    <include
        layout="@layout/fragment_modal_edit_expense"
        android:id="@+id/modalEditExpense"
        android:visibility = "gone"/>

    <include
        layout="@layout/fragment_modal_filter_amount"
        android:id="@+id/modalFilterAmount"
        android:visibility = "gone"/>

    <include
        layout="@layout/fragment_modal_filter_date"
        android:id="@+id/modalFilterDate"
        android:visibility = "gone"/>

</RelativeLayout>